# cryptjapan

./: .env.example  .gitignore  CNAME  README.md  index.html  pyproject.toml
.github/workflows/: deploy-pages.yml  deploy-worker.yml
cryptjapan/: arbitrage.py  collectorcrypt.py  main.py  snkrdunk.py
docs/: index.html
worker/: wrangler.toml
worker/src/: index.js
