[project]
name = "cryptjapan"
version = "0.1.0"
description = "Arbitrage tool: Collector Crypt vs Snkrdunk"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32",
    "rich>=13.0",
]

[project.scripts]
arbitrage = "cryptjapan.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cryptjapan"]
